--- a/app/design/frontend/amp/default/layout/local.xml
+++ b/app/design/frontend/amp/default/layout/local.xml
@@ -5,12 +5,37 @@
 	Add/Remove Items From Head
 	-->
 	<default translate="label" module="page">
-		<reference name="head">
-			<!-- Add Javascript File -->
-			<action method="addItem"><type>skin_js</type><name>js/jquery.js</name><params/></action>
-			<!-- Add CSS File -->
-			<action method="addCss"><stylesheet>css/local.css</stylesheet></action>
+		
+		<reference name="root">
+			<reference name="head">
+			
+				<!-- No javascript is allowed -->
+				<action method="removeItem"><type>js</type><script>prototype/prototype.js</script></action>
+				<action method="removeItem"><type>js</type><script>lib/ccard.js</script></action>
+				<action method="removeItem"><type>js</type><script>prototype/validation.js</script></action>
+				<action method="removeItem"><type>js</type><script>scriptaculous/builder.js</script></action>
+				<action method="removeItem"><type>js</type><script>scriptaculous/effects.js</script></action>
+				<action method="removeItem"><type>js</type><script>scriptaculous/dragdrop.js</script></action>
+				<action method="removeItem"><type>js</type><script>scriptaculous/controls.js</script></action>
+				<action method="removeItem"><type>js</type><script>scriptaculous/slider.js</script></action>
+				<action method="removeItem"><type>js</type><script>varien/js.js</script></action>
+				<action method="removeItem"><type>js</type><script>varien/form.js</script></action>
+				<action method="removeItem"><type>js</type><script>varien/menu.js</script></action>
+				<action method="removeItem"><type>js</type><script>mage/translate.js</script></action>
+				<action method="removeItem"><type>js</type><script>mage/cookies.js</script></action>
+				<action method="unsetChild"><name>js_cookies</name></action>
+
+				<!-- No css is allowed -->
+				<action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
+				<action method="removeItem"><type>skin_css</type><name>css/widgets.css</name></action>
+				<action method="removeItem"><type>skin_css</type><name>css/print.css</name></action>
+				<action method="removeItem"><type>skin_css</type><name>css/styles-ie.css</name><params/><if>lt IE 8</if></action>
+				<action method="removeItem"><type>js</type><name>lib/ds-sleight.js</name><params/><if>lt IE 7</if></action>
+				<action method="removeItem"><type>skin_js</type><name>js/ie6.js</name><params/><if>lt IE 7</if></action>
+
+			</reference>
 		</reference>
+		
 		<remove name="catalog.compare.sidebar" />
 		<remove name="right.permanent.callout" />
 		<remove name="left.permanent.callout" />
