Canonical and Header Added
Added Canonical tag by simply removing /amp/ from current URL.
Also added a button to the header that takes people to the full website.

--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -1,5 +1,7 @@
-<header class="title-bar">
+<header class="title-bar clearfix">
 	<div class="wrapper">
-		<a href="https://www.justhype.co.uk" title="JUST HYPE" class="logo">HYPE</a>
+		<a href="https://www.justhype.co.uk" title="JUST HYPE" class="logo">⚡</a>
+		
+		<a href="#" title="JUST HYPE" class="nav btn btn__cta">Shop on Full Site</a>
 	</div>
 </header>
