--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -1,8 +1,5 @@
 <header class="title-bar clearfix">
 	<div class="wrapper">
-		<a href="https://www.justhype.co.uk" title="JUST HYPE" class="logo">⚡</a>
-
-		<?php $currentUrl = Mage::helper('core/url')->getCurrentUrl();$bodytag = str_replace("/amp/", "/", $currentUrl); ?>
-		<a href="<?php echo $bodytag; ?>" title="JUST HYPE" class="nav btn btn__cta">Shop on Full Site</a>
+		<a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="nav btn btn__cta">⚡ <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
 	</div>
 </header>
