--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -9,4 +9,14 @@
 		padding: 0.5em;
 		box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.46);
 	}
+	
+	header.logo {
+		display: block;
+	}
+	
+	header.logo img {
+		-webkit-filter:invert(100%);
+		 width: 40px;
+		 vertical-align:middle;
+	}
 </style>
