Logo url seems wrong *hmm*

--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -1,5 +1,5 @@
 <header class="title-bar clearfix">
 	<div class="wrapper">
-		<a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">⚡ <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
+		<a href="<?php echo $this->getUrl('/amp/') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">⚡ <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
 	</div>
 </header>
