--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -1,3 +1,9 @@
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js" async></script>
+<script custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js" async></script>
+
+<amp-analytics type="googleanalytics"></amp-analytics>
+
+
 <style amp-custom>
 /*
 	Place your styles here, EG:
@@ -21,3 +27,4 @@
 		 vertical-align:middle;
 	}
 </style>
+   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
