--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -13,6 +13,8 @@
 		border-bottom: 0;
 		padding: 0.5em;
 		box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.46);
+		position: relative;
+		z-index: 30;
 	}
 	
 	header .logo {
