--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -3,3 +3,51 @@
 		<a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">⚡ <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
 	</div>
 </header>
+
+
+  <amp-sidebar id='sidebar'
+      layout="nodisplay"
+      side="right">
+    <amp-img class='amp-close-image'
+        src="/img/ic_close_black_18dp_2x.png"
+        width="20"
+        height="20"
+        alt="close sidebar"
+        on="tap:sidebar.close"
+        role="button"
+        tabindex="0"></amp-img>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li> Nav item 1</li>
+      <li>
+        <amp-fit-text width="220"
+            height="20"
+            layout="responsive"
+            max-font-size="24">
+          Nav item 2 - &lt;amp-fit-text&gt;
+        </amp-fit-text>
+      </li>
+      <li>
+        <amp-fit-text width="220"
+            height="20"
+            layout="responsive"
+            max-font-size="24">
+          Nav item 3 - &lt;amp-fit-text&gt; longer text
+        </amp-fit-text>
+      </li>
+      <li> Nav item 4 - Image
+        <amp-img class='amp-sidebar-image'
+            src="/img/favicon.png"
+            width="20"
+            height="20"
+            alt="an image"></amp-img>
+      </li>
+      <li> Nav item 5</li>
+      <li> Nav item 6</li>
+    </ul>
+  </amp-sidebar>
+  <button on='tap:sidebar.toggle'>Toggle sidebar</button>
+  <button on='tap:sidebar.open'>Open sidebar</button>
+  <button on='tap:sidebar.close'>Close sidebar</button>
