--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -1,6 +1,6 @@
 <header class="title-bar clearfix">
 	<div class="wrapper">
-		<img amp-img-id="AMP_3" alt="navigation" role="button" on="tap:sidebar.open" class="-amp-fill-content -amp-replaced-content" src="http://ampbyexample.com/img/ic_menu_white_2x_web_24dp.png">
+		<img amp-img-id="AMP_3" alt="navigation" role="button" on="tap:sidebar.open" src="http://ampbyexample.com/img/ic_menu_white_2x_web_24dp.png">
 		<a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">⚡ <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
 	</div>
 </header>
