--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -1,33 +1,34 @@
 <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js" async></script>
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
 <script async custom-element="amp-fit-text" src="https://cdn.ampproject.org/v0/amp-fit-text-0.1.js"></script> 
-
 <amp-analytics type="googleanalytics"></amp-analytics>
 
 
 <style amp-custom>
-/*
-	Place your styles here, EG:
-*/
+header.title-bar {
+	background: #232f3e;
+	border-bottom: 0;
+	padding: 0.5em;
+	box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.46);
+	position: relative;
+	z-index: 30;
+	vertical-align:middle;
+}
 
-	header.title-bar {
-		background: #232f3e;
-		border-bottom: 0;
-		padding: 0.5em;
-		box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.46);
-		position: relative;
-		z-index: 30;
-	}
-	
-	header .logo {
-		display: block;
-		    text-decoration: none;
-	}
-	
-	header .logo img {
-		-webkit-filter:invert(100%);
-		 width: 40px;
-		 vertical-align:middle;
-	}
+.amp-sidebar-headopen {
+	vertical-align:middle;
+}
+
+header .logo {
+	display: block;
+	text-decoration: none;
+}
+
+header .logo img {
+	-webkit-filter:invert(100%);
+	width: 40px;
+	vertical-align:middle;
+}
 </style>
-   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+
+<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
