--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -17,6 +17,9 @@ header.title-bar {
 
 .amp-sidebar-headopen {
 	vertical-align:middle;
+	width: 30px;
+    margin-right: 20px;
+    margin-left: 15px;
 }
 
 header .logo {
