--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -17,7 +17,7 @@ side="left">
 	on="tap:sidebar.close"
 	role="button"
 	tabindex="0"></amp-img>
-	<ul>
+	<ul class="sidebar-links">
 		<li>
 			<a href="/mens">Mens</a>
 		</li>
