--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -22,6 +22,18 @@ header.title-bar {
     margin-left: 15px;
 }
 
+.sidebar-links {
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+
+.sidebar-links a {
+	display: block;
+	padding: 10px 30px;
+	color: #000;
+}
+
 header .logo {
 	display: inline-block;
 	text-decoration: none;
