--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -39,11 +39,14 @@ header.title-bar {
 }
 
 .sidebar-links a {
-	display: block;
-	padding-left: 10px;
-	color: rgba(0,0,0,.87);
-	line-height: 40px;
+    display: block;
+    font-weight: 500;
+    padding-left: 16px;
+    color: rgba(0,0,0,.87);
+    line-height: 40px;
     font-family: Roboto,Helvetica,Arial,sans-serif;
+    text-decoration: none;
+    font-size: 13px;
 }
 
 header .logo {
@@ -55,6 +58,11 @@ header .logo img {
 	-webkit-filter:invert(100%);
 	width: 40px;
 	vertical-align:middle;
+}
+
+amp-sidebar {
+	background: white;
+	box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.46);
 }
 </style>
 
