amp sidebar update

--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -17,6 +17,12 @@ side="left">
 	on="tap:sidebar.close"
 	role="button"
 	tabindex="0"></amp-img>
+	<h3>
+		JUST HYPE
+	</h3>
+	
+	<hr />
+	
 	<ul class="sidebar-links">
 		<li>
 			<a href="/mens">Mens</a>
