--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -63,15 +63,10 @@ header .logo img {
 amp-sidebar {
 	background: white;
 	box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.46);
+	width:150px;
 }
 .-amp-sidebar-mask {
 	opacity: 0.4;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-
 }
 </style>
 
