sidebar style update

--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -17,7 +17,7 @@ side="left">
 	on="tap:sidebar.close"
 	role="button"
 	tabindex="0"></amp-img>
-	<h3>
+	<h3 class="sidebar-logo">
 		JUST HYPE
 	</h3>
 	
