--- a/app/design/frontend/amp/default/template/page/html/styles.phtml
+++ b/app/design/frontend/amp/default/template/page/html/styles.phtml
@@ -43,10 +43,24 @@ header.title-bar {
     font-weight: 500;
     padding-left: 16px;
     color: rgba(0,0,0,.87);
-    line-height: 40px;
+    line-height: 45px;
     font-family: Roboto,Helvetica,Arial,sans-serif;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 16px;
+}
+
+.amp-close-image {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 10px;
+    top: 11px;
+}
+
+h3.sidebar-logo {
+	margin-top: 16px;
+	/* padding: 10px; */
+	padding-left: 16px;
 }
 
 header .logo {
@@ -63,7 +77,7 @@ header .logo img {
 amp-sidebar {
 	background: white;
 	box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.46);
-	width:150px;
+	width:200px;
 }
 .-amp-sidebar-mask {
 	opacity: 0.4;
