updated sidebar urls

--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -25,13 +25,13 @@ side="left">
 	
 	<ul class="sidebar-links">
 		<li>
-			<a href="/mens">Mens</a>
+			<a href="<?php echo $this->getUrl('') ?>/mens">Mens</a>
 		</li>
 		<li>
-			<a href="/womens">Womens</a>
+			<a href="<?php echo $this->getUrl('') ?>/womens">Womens</a>
 		</li>
 		<li>
-			<a href="/cart">Cart</a>
+			<a href="<?php echo $this->getUrl('') ?>/cart">Cart</a>
 		</li>
 	</ul>
 </amp-sidebar>
