added new sidebar links

--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -31,6 +31,15 @@ side="left">
 			<a href="<?php echo $this->getUrl('') ?>/womens">Womens</a>
 		</li>
 		<li>
+			<a href="<?php echo $this->getUrl('') ?>/footwear">Footwear</a>
+		</li>
+		<li>
+			<a href="<?php echo $this->getUrl('') ?>/kids">Kids</a>
+		</li>
+		<li>
+			<a href="<?php echo $this->getUrl('') ?>/bags">Bags</a>
+		</li>
+		<li>
 			<a href="<?php echo $this->getUrl('') ?>/cart">Cart</a>
 		</li>
 	</ul>
