--- a/app/design/frontend/amp/default/template/page/html/header.phtml
+++ b/app/design/frontend/amp/default/template/page/html/header.phtml
@@ -2,6 +2,10 @@
 	<div class="wrapper">
 		<img amp-img-id="AMP_3" alt="navigation" role="button" class="amp-sidebar-headopen" on="tap:sidebar.open" src="http://ampbyexample.com/img/ic_menu_white_2x_web_24dp.png">
 		<a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo"><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /> ⚡</a>
+		<form action="https://www.justhype.co.uk/catalogsearch/result/" method="get" role="search">
+				<input id="search" autocomplete="off" type="text" name="q" placeholder="Search justhype.co.uk">
+				<button type="submit">Search</button>
+		</form>
 	</div>
 </header>
 
